# high-fidelity-model

./: CMakeLists.txt  README.md  build.sh  run.sh  测试说明.docx
cfg/: main.cfg
include/ArgParse/: ArgEncoder.h  ArgParse.h  CfgParser.h
include/Common/: Entropy.h  HFTransITrans.h  IQuant.h  LLPuCclm.h  LLPuITrans.h  LLPuInter.h  LLPuIntra.h  LLPuRecon.h  RecImage.h  Types.h  Wavelet.h
include/Decoder/: AlphaDecoder.h  Decoder.h  SubPicDec.h
include/Decoder/HFDecoder/: HFDecoder.h  HFDecoderEntropy.h
include/Decoder/LLDecoder/: LLDecoder.h  LLDecoderEntropy.h
include/Encoder/: AlphaEncoder.h  Encoder.h  EncoderQuant.h  SubPicEnc.h
include/Encoder/HFEncoder/: HFEncoder.h  HFEncoderEntropy.h
include/Encoder/LLEncoder/: LLEncoder.h  LLEncoderEntropy.h  LLEncoderME.h  LLEncoderTrans.h
include/Utils/: BasicTypes.h  Const.h  FrameBuffer.h  Log.h  Status.h  Table.h  Timer.h  Tool.h  Utils.h  md5.h
include/Video/: SubPic.h  Video.h
src/Common/: HFTransITrans.cpp  IQuant.cpp  LLPuCclm.cpp  LLPuITans.cpp  LLPuInter.cpp  LLPuIntra.cpp  LLPuRecon.cpp  RecImage.cpp  Wavelet.cpp
src/Decoder/: AlphaDecoder.cpp  Decoder.cpp  DecoderApp.cpp  SubPicDec.cpp
src/Decoder/HFDecoder/: HFDecoder.cpp  HFDecoderEntropy.cpp
src/Decoder/LLDecoder/: LLDecoder.cpp  LLDecoderEntropy.cpp
src/Encoder/: AlphaEncoder.cpp  Encoder.cpp  EncoderApp.cpp  EncoderQuant.cpp  SubPicEnc.cpp
src/Encoder/HFEncoder/: HFEncoder.cpp  HFEncoderEntropy.cpp
src/Encoder/LLEncoder/: LLEncoder.cpp  LLEncoderEntropy.cpp  LLEncoderME.cpp  LLEncoderTrans.cpp
src/Utils/: md5.cpp
src/Video/: SubPic.cpp  Video.cpp
windows/: CMakeLists.txt  setup.bat
